--- a/creative_agency/index.html
+++ b/creative_agency/index.html
@@ -10,8 +10,8 @@
 <body>
 
     <header>
-        <div class="logo"></div>
-        <div class="toggle"></div>
+        <div class="logo">Creative Agency</div>
+        <div class="toggle active"></div>
         <div class="navigation">
             <ul>
                 <li><a href="index.html">Home</a></li>
