--- a/creative_agency/index.html
+++ b/creative_agency/index.html
@@ -11,7 +11,7 @@
 
     <header>
         <div class="logo">Creative Agency</div>
-        <div class="toggle active"></div>
+        <div class="toggle"></div>
         <div class="navigation">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -44,11 +44,11 @@
         </div>
     </header>
 
-    <section>
+    <section class="home">
         <img src="images/home-img.jpg" alt="" class="home-img">
         <div class="home-content">
             <h1>We help to achieve <br>your goals.</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium unde eius id sequi doloremque obcaecati saepe rem delectus quibusdam modi, similique voluptatibus praesentium eligendi pariatur quod voluptas consequuntur velit ipsum quas iusto enim ex, perferendis assumenda. Ullam quibusdam ipsa excepturi?</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium unde eius id sequi doloremque obcaecati saepe rem delectus quibusdam modi, similique voluptatibus praesentium eligendi pariatur quod voluptas consequuntur.</p>
             <a href="contact.html" class="btn">Get Started</a>
         </div>
     </section>
